--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -3,8 +3,6 @@
     max-width: 1000px;
     margin: 0 auto;
     margin-bottom: 24px;
-    border-style: solid;
-    border-color: white
 }
 
 .section h2 {
